# comp308

./: .gitignore  Makefile  README.md  appsem.html  arithlang.html  church.html  cleaner.html  cont.html  control-with-label-and-goto.html  control.html  dispatch-olds.html  dispatch.html  dispatch2.html  dispatch_v1.html  errornot.html  fun-arith.html  fun-in-piclang.html  fun.html  generators.html  genindex.html  growing.html  index.html  intro.html  lambda.html  machine.html  motivation.html  mutations.html  notional-machine.html  objects-self.html  objects.html  objects.inv  objects2.html  piclang.html  pureobjects.html  pyproject.toml  racket-intro.html  racket.html  search.html  searchindex.js  stacks-and-scope.html  (+4 more)
_sources/: appsem.rst.txt  arithlang.rst.txt  church.rst.txt  cleaner.rst.txt  cont.rst.txt  control-with-label-and-goto.rst.txt  control.rst.txt  dispatch.rst.txt  errornot.rst.txt  fun-arith.rst.txt  fun-in-piclang.rst.txt  fun.rst.txt  generators.rst.txt  growing.rst.txt  index.rst.txt  intro.rst.txt  lambda.rst.txt  machine.rst.txt  motivation.rst.txt  mutations.rst.txt  notional-machine.rst.txt  objects.rst.txt  objects2.rst.txt  piclang.rst.txt  pureobjects.rst.txt  racket-intro.rst.txt  racket.rst.txt  stacks-and-scope.rst.txt  stacksnscope.rst.txt  synthlang.rst.txt  types.rst.txt  work.rst.txt
image-lib/: picture-io.rkt  picture-lib.rkt
pictures/: README.rst  Untitled.rkt  dp.rkt  dpc.rkt  interp-with-bool.pl  interp.pl  lazy.rkt  microkanren-typed.rkt  microkanren.rkt  obj.graffle  oops-part1.rkt  oops-part2.rkt  oops-part3.rkt  taylor.rkt  (+14 more)
(+55 files in other folders)
