[project]
name = "comp308"
version = "0.1.0"
description = "Course notes for COMP308 at Krea University, based on PLAI"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "metapensiero-sphinx-d2>=0.10",
    "sphinx-design>=0.6.1",
    "sphinx>=7.4.7",
    "sphinxcontrib-d2lang>=0.0.2",
]
